[package]
name = "concordium-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = {version = "7.0", features = ["chrono", "tracing"] }
async-graphql-axum = "7.0"
axum = "0.7"
ciborium = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
concordium-rust-sdk = { path = "./concordium-rust-sdk" }
derive_more = "0.99"
dotenv = "0.15"
futures = "0.3"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1.35"
iso8601-duration = { version = "0.2", features = ["chrono"] }
tokio-util = "0.7"
