[package]
name = "concordium-scan"
version = "0.1.46"
edition = "2021"
description = "CCDScan: Indexer and API for the Concordium blockchain"
authors = ["Concordium <developers@concordium.com>"]
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = {version = "7.0", features = ["chrono", "tracing"] }
async-graphql-axum = "7.0"
axum = "0.7"
ciborium = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
concordium-rust-sdk = { path = "./concordium-rust-sdk" }
derive_more = { version = "1.0.0", features = ["display", "from", "from_str", "into"] }
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.35"
iso8601-duration = { version = "0.2", features = ["chrono"] }
tokio-util = "0.7"
prometheus-client = "0.22"
tonic = { version = "0.10.2", features = ["tls-roots", "tls"]}
tower-http = { version = "0.6", features = ["cors"] }
bigdecimal = "0.4.7"
regex = "1.10.4"
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
mockito = "1.4"

# Recommended by SQLx to speed up incremental builds
[profile.dev.package.sqlx-macros]
opt-level = 3
