[package]
name = "rust-bindings"
version = "0.1.0"
edition = "2021"

[package.metadata]
exclude = ["test-data/*"]

[lib]
name="rust_bindings"
crate-type = ["dylib"]

[dependencies]
anyhow="1.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.concordium_base]
path = "../../concordium-base/rust-src/concordium_base"
